# smartshala_backend

./: build.sh  manage.py  pyproject.toml
backend/: settings.py
backend/smartshala/: apps.py
smartshala/: asgi.py  settings.py  urls.py  wsgi.py
smartshala/core/: apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
smartshala/grader_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
smartshala/school_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
smartshala/test_app/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
smartshala/test_app/templatetags/: shuffle_algs.py
