[tool.poetry]
name = "smartshala-backend"
version = "0.1.0"
description = ""
authors = ["Ananyobrata Pal <ananyo141@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "smartshala_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
